test/flowanalysis/recursion/rec_obj-1.good
rec_obj-1.chpl:1: error: Unable to determine type of field from nil
